# StoryCanva2.0

./: .gitignore  README.md  StoryCanva 设计规范.md  app copy.py  app.py  jest.config.js  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
backend/: run.py  test_app.py
backend/Qiaoban/: README.md  client.py  collect.py
backend/app/: __init__.py  app.py  models.py  utils.py  views.py
backend/app/bbs/: schema.sql  server.js  story.db
backend/app/controllers/: __init__.py  api_controller.py  auth_controller.py  main_controller.py  post_controller.py  user_controller.py
backend/bbs/: server.js  story.db
backend/chatTest/: .env  chat.py
backend/collage-diffusion/stable-diffusion/: .gitignore
bbs-backend/: app.py  schema.sql  story.db
collage-diffusion/backend/: api.py  backend.md  伪代码.md
collage-diffusion/frontend/: package-lock.json
docs/: database_design.md  gallery.md
frontend/static/css/: bbs.css  (+7 more)
frontend/templates/: achievement.html  base.html  community.html  create.html  detail.html  edit_profile.html  edit_story.html  index.html  login.html  my_stories.html  profile.html  register.html  user_comments.html  user_posts.html
github_site/: index.html
refer/: app.py  chat.js  detail.html  list.html
static/css/: bbs.css  contact.css  css2 (2).css
static/js/: bbs.js  main.js
templates/: create.html  detail.html
test_results/: performance_test_20250406_163801.json
tests/: performance_test.py
tests/chatTest/: chat.py
tests/test_results/: performance_test_20250406_200306.json
(+19 files in other folders)
