[project]
name = "storycanva"
version = "2.0.0"
description = "StoryCanva - 一个AI辅助的故事创作平台"
authors = [
    {name = "Nora", email = "nora@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
flask = "^2.0.1"
flask-cors = "^3.0.10"
python-dotenv = "^0.19.0"
openai = "^1.3.0"
requests = "^2.28.1"
pillow = "^9.2.0"
anthropic = "^0.5.0"
tiktoken = "^0.4.0"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.3.0",
    "flake8>=4.0.1",
]

[tool.setuptools]
packages = ["app", "chatTest"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry]
packages = [{include = "storycanva2"}]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
