[project]
name = "storycanva2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Nora",email = "xhmao119@163.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "storycanva2"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
